# PraatPlugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md
docs/adr/: ADR-001-juce-integration-strategy.md  ADR-002-praat-ipc-strategy.md  ADR-003-audio-thread-isolation.md  ADR-004-temp-file-lifecycle.md  ADR-005-sandbox-compatibility-scope.md  ADR-006-result-output-contract.md  ADR-007-cmake4-juce8-compatibility.md  ADR-008-file-based-audio-workflow.md  README.md  template.md
legacy/: PraatPluginEditor_JUCE.cpp  PraatPluginEditor_JUCE.h
scripts/examples/: README.md  formant_analysis.praat  fuzz_distortion.praat  paulstretch.praat  pitch_analysis.praat  pitch_shift.praat  robot_voice.praat  spectral_reverb.praat  stereo_phaser.praat  wavefolder.praat
src/audio/: AudioCapture.cpp  AudioCapture.h  WavFileWriter.cpp  WavFileWriter.h
src/debug/: DebugWatchdog.cpp  DebugWatchdog.h
src/jobs/: AnalysisJob.cpp  AnalysisJob.h  JobDispatcher.cpp  JobDispatcher.h  JobQueue.cpp  JobQueue.h
src/plugin/: PraatPluginEditor.cpp  PraatPluginEditor.h  PraatPluginEditor_mac.mm  PraatPluginProcessor.cpp  PraatPluginProcessor.h
src/praat/: PraatFormParser.cpp  PraatFormParser.h  PraatInstallationLocator.cpp  PraatInstallationLocator.h  PraatRunner.cpp  PraatRunner.h  PraatScriptInvoker.cpp  PraatScriptInvoker.h
src/results/: AnalysisResult.h  ResultParser.cpp  ResultParser.h
src/scripts/: ScriptDownloader.cpp  ScriptDownloader.h  ScriptManager.cpp  ScriptManager.h  ScriptParameterParser.cpp  ScriptParameterParser.h
src/ui/: WaveformDisplay.cpp  WaveformDisplay.h
tests/: CMakeLists.txt  test_JobQueue.cpp  test_PraatInstallationLocator.cpp  test_ResultParser.cpp
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.css  App.jsx  main.jsx
ui/src/bridge/: juceBridge.js
ui/src/components/AnalyzeButton/: AnalyzeButton.css  AnalyzeButton.jsx
ui/src/components/AudioSection/: AudioSection.css  AudioSection.jsx
ui/src/components/DevPanel/: DevPanel.css  DevPanel.jsx
ui/src/components/Header/: Header.css  Header.jsx
ui/src/components/Results/: Results.css  Results.jsx
ui/src/components/ScriptBrowser/: ScriptBrowser.css  ScriptBrowser.jsx
ui/src/components/ScriptParams/: ScriptParams.css  ScriptParams.jsx
ui/src/components/ScriptSection/: ScriptSection.css  ScriptSection.jsx
ui/src/components/StatusBar/: StatusBar.css  StatusBar.jsx
ui/src/components/Transport/: Transport.css  Transport.jsx
ui/src/components/Waveform/: Waveform.css  Waveform.jsx
ui/src/hooks/: usePluginState.js
ui/src/styles/: global.css  tokens.css
